--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "hifive-spec",
-  "version": "0.2.2",
-  "description": "Spec-style reporter for Hi-Five",
+  "name": "specify-reporter-spec",
+  "version": "1.0.0-rc1",
+  "description": "Spec-style reporter for the Specify framework",
   "main": "./index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hifivejs/hifive-spec"
+    "url": "https://github.com/origamitower/specify-reporter-spec"
   },
   "keywords": [
     "testing",
-    "hifive",
-    "hifive-reporter"
+    "specify",
+    "specify-reporter"
   ],
   "author": "Quildreen Motta",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hifivejs/hifive-spec/issues"
+    "url": "https://github.com/origamitower/specify-reporter-spec/issues"
   },
   "dependencies": {
     "chalk": "^0.4.0",
